--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: #202742;
+}
+#titre{
+    font-size: 34px;
+    color: white;
+    padding: 50px 0 100px 0;
+}
